--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,27 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "api/index.js",
-            "use": "@vercel/node"
+      {
+        "src": "client/package.json",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "client/dist"
         }
+      },
+      {
+        "src": "api/index.js",
+        "use": "@vercel/node"
+      }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "api/index.js"
-        }
+      {
+        "src": "/api/(.*)",
+        "dest": "/api/index.js"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/client/dist/$1"
+      }
     ]
-}
+  }
+  
