--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,15 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "client/package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "client/dist"
+        {
+            "src": "index.js",
+            "use": "@vercel/node"
         }
-      },
-      {
-        "src": "api/index.js",
-        "use": "@vercel/node"
-      }
     ],
     "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "/api/index.js"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/client/dist/$1"
-      }
+        {
+            "src": "/(.*)",
+            "dest": "index.js"
+        }
     ]
-  }
-  
+}
